@@ -2,9 +2,15 @@ package org.bukkit.craftbukkit;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URL;
 import java.text.SimpleDateFormat;
 import java.util.Arrays;
+import java.util.Calendar;
+import java.util.Date;
+import java.util.Enumeration;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
+import java.util.jar.Manifest;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import joptsimple.OptionParser;
@@ -15,7 +21,54 @@ public class Main {
     public static boolean useJline = true;
     public static boolean useConsole = true;
 
-    public static void main(String[] args) {
+    public static void main(String[] args) throws Exception {
+        // Spigot Start
+        File lock = new File( ".update-lock" );
+        if ( !new File( "update-lock" ).exists() && !lock.exists()  && System.getProperty( "IReallyKnowWhatIAmDoingThisUpdate" ) == null )
+        {
+            System.err.println( "WARNING: This Minecraft update alters the way in which saved data is stored." );
+            System.err.println( "Please ensure your server is in the correct online/offline mode state, as the changes made are PERMANENT" );
+            System.err.println( "If you are running in offline mode, but your BungeeCord is in online mode, it is imperative that BungeeCord support is enabled in spigot.yml and BungeeCord's config.yml" );
+            System.err.println( "By typing `yes` you acknowledge that you have taken the necessary backups and are aware of this conversion" );
+            System.err.println( "Please type yes to continue starting the server. You have been warned :)" );
+            System.err.println( "See http://www.spigotmc.org/wiki/uuid-conversion/ if you have any questions and remember BACKUP BACKUP BACKUP" );
+            System.err.println( "=================================================================================" );
+            System.err.println( "Starting server in 10 seconds" );
+            lock.createNewFile();
+            try
+            {
+                Thread.sleep( TimeUnit.SECONDS.toMillis( 10 ) );
+            } catch ( InterruptedException ex )
+            {
+            }
+        }
+
+        System.err.println( "This Spigot build supports Minecraft clients both of versions 1.7.x and of 1.8.x.\n"
+                + "*** It is imperative that backups be taken before running this build on your server! ***\n"
+                + "Please report any such issues to http://www.spigotmc.org/, stating your client, server, and if applicable BungeeCord versions.\n"
+                + "*** Any bug reports not running the very latest versions of these softwares will be ignored ***\n\n" );
+
+        Enumeration<URL> resources = Main.class.getClassLoader().getResources( "META-INF/MANIFEST.MF" );
+        while ( resources.hasMoreElements() )
+        {
+            Manifest manifest = new Manifest( resources.nextElement().openStream() );
+            String ts = manifest.getMainAttributes().getValue( "Timestamp" );
+            if ( ts != null )
+            {
+                Date buildDate = new SimpleDateFormat( "yyyyMMdd-hhmm" ).parse( ts );
+
+                Calendar cal = Calendar.getInstance();
+                cal.add( Calendar.DAY_OF_YEAR, -2 );
+                if ( buildDate.before(cal.getTime() ) )
+                {
+                    System.err.println( "WARNING: This build is more than 2 days old and there are likely updates available!" );
+                    System.err.println( "You will get no support with this build unless you update from http://ci.md-5.net/job/Spigot/" );
+                    System.err.println( "The server will start in 10 seconds!" );
+                    Thread.sleep( TimeUnit.SECONDS.toMillis( 10 ) );
+                }
+            }
+        }
+        // Spigot End
         // Todo: Installation script
         OptionParser parser = new OptionParser() {
             {
@@ -155,7 +208,22 @@ public class Main {
                     useConsole = false;
                 }
 
-                System.out.println("Loading libraries, please wait...");
+                // Spigot Start
+                int maxPermGen = 0; // In kb
+                for ( String s : java.lang.management.ManagementFactory.getRuntimeMXBean().getInputArguments() )
+                {
+                    if ( s.startsWith( "-XX:MaxPermSize" ) )
+                    {
+                        maxPermGen = Integer.parseInt( s.replaceAll( "[^\\d]", "" ) );
+                        maxPermGen <<= 10 * ("kmg".indexOf( Character.toLowerCase( s.charAt( s.length() - 1 ) ) ) );
+                    }
+                }
+                if ( Float.parseFloat( System.getProperty( "java.class.version" ) ) < 52 && maxPermGen < ( 128 << 10 ) ) // 128mb
+                {
+                    System.out.println( "Warning, your max perm gen size is not set or less than 128mb. It is recommended you restart Java with the following argument: -XX:MaxPermSize=128M" );
+                    System.out.println( "Please see http://www.spigotmc.org/wiki/changing-permgen-size/ for more details and more in-depth instructions." );
+                }
+                // Spigot End
                 MinecraftServer.main(options);
             } catch (Throwable t) {
                 t.printStackTrace();
